--- a/python/templates/login.html
+++ b/python/templates/login.html
@@ -1,24 +1,10 @@
 <html>
-
-<head>
-   <script type = "text/javascript" 
-      src = "{{ url_for('static', filename = 'js/hello.js') }}" ></script>
-</head>
-
-<body>
-   {% if time_display.hour<10 %}
-   <h1>Good Morning</h1>
-   {% elif time_display.hour<15 %}
-   <h1>Good Evening</h1>
-   {% else %}
-   <h1>Good Afternoon</h1>
-   {% endif %}
-   <form action="http://localhost:5000/login" method="post">
-      <p>Enter Name @ {{ time_display }}:</p>
-      <p><input type="text" name="name" /></p>
-      <p><input type="submit" value="submit" /></p>
-   </form>
-   <img style="height: 100px; cursor: pointer;" src="{{ url_for('static', filename = 'img/Moby-logo.png') }}" onclick = "sayHello()" />
-</body>
-
+    <body>
+        <h1>Please input your username to login:</h1>
+        <form action="" method="post">
+            <input type="text" name="username" />
+            <input type="submit" value="Login" />
+        </form>
+    </body>
 </html>
+
