--- a/python/templates/upload.html
+++ b/python/templates/upload.html
@@ -5,5 +5,6 @@
          <input type = "file" name = "file" />
          <input type = "submit"/>
       </form>
+      <img style="height: 200px; cursor: pointer;" src="{{ url_for('static', filename = 'img/friends.gif') }}" onclick = "sayHello()" />
    </body>
 </html>
