--- a/python/static/css/report.css
+++ b/python/static/css/report.css
@@ -32,20 +32,32 @@ body {
   background-color: #ffffff;
 }
 
-.report div:not(:last-child) {
+.report > div:not(:last-child) {
   border-bottom: 1px solid #5050ff;
 }
 
-.report div h1,h2,h3 {
+.report > div h1,h2,h3 {
   text-align:center;
 }
 
-.report div table {
-  width: 100%;
+.report > div table{
   margin-left: auto;
   margin-right: auto;
 }
 
-.report div table.df-table-full + p {
+.report > div table:not(.df-table-mini) {
+  width: 100%;
+}
+
+.report > div > div.df-table-mini-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  overflow:hidden;
+  overflow-y: scroll;
+  height: 200px;
+}
+
+.report > div table.df-table-summary + p {
   text-align:center;
 }
