--- a/python/templates/report.html
+++ b/python/templates/report.html
@@ -55,7 +55,8 @@
         <div>
             <h2>Trade Summary</h2>
             <p>
-                Taking into account only the settled transactions, the following results are concluded:
+                Taking into account only the settled transactions, the following results are concluded for the time
+                period from <b>{{ report.StartingDate }}</b> to <b>{{ report.FinishingDate }}</b>:
             </p>
             <p>
                 Trade volume on the buy side: <b>{{ '{:,}'.format(report.buySum) }}</b>
@@ -66,7 +67,8 @@
                 <br />
                 Net realised profit: <b>{{ '{:,}'.format(report.sellSum-report.buySum) }}</b>
             </p>
-            <p>In order to plot the time series charts, we need to calculate the important factors on a daily basis. Using the
+            <p>In order to plot the time series charts, we need to calculate the important factors on a daily basis.
+                Using the
                 following section, you can see the calculated results at the end of each day.</p>
             <form action="/action_page.php">
                 <select name="daily_data" id="daily_data" onchange="dailyDataChange()">
