--- a/python/static/css/report.css
+++ b/python/static/css/report.css
@@ -78,3 +78,9 @@ h3 {
   overflow-y: auto;
   max-height: 200px;
 }
+
+#plots_section>img {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+}
