--- a/python/static/css/report.css
+++ b/python/static/css/report.css
@@ -79,8 +79,16 @@ h3 {
   max-height: 200px;
 }
 
-#plots_section>img {
+#plots_section>img,#profit_histogram_plot_section>img {
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
+}
+
+#profitHistogram {
+  display: none;
+}
+
+#profitHistogram.show {
+  display: block;
 }
